/*
UCF COP3330 Summer 2021 Assignment 3 Solution
Copyright 2021 Melissa Cabrera

Exercise 45 - Word Finder

There will be times when you'll need to read in one file, modify it, and then write
a modified version of that file to a new file.

Given an input file, read the file and look for all occurrences of the word utilize. Replace each occurrence with use.
Write the modified file to a new file.

Constraints
- Prompt for the name of the output file.
- Write the output to a new file.
 */

package ex45;

import ex45.util.Process;
import java.io.IOException;

public class App {
    public static void main(String[] args) throws IOException {
        Process.process();
    }
}
